# prompt-invaders

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  globals.c  globals.h  iohandler.c  iohandler.h  main.c  menu.c  start.c  typewriter.h  utilities.c  utilities.h
data_structures/: matrix.c  matrix.h  memory.c  memory.h  shot_linkedlist.c  shot_linkedlist.h
scenes/: game.c  game.h  gameover.c  gameover.h  menu.c  menu.h  start.c  start.h
system/: gamestate.c  gamestate.h  typewriter.c  utilities.c
